--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.15.6",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
     "webpack": "^4.4.1"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "webpack-cli": "^2.0.13"
   }
 }
