--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.8",
@@ -18,6 +19,7 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
+    "react-router": "^3.2.0",
     "redux": "^3.7.2",
     "webpack": "^4.4.1"
   },
@@ -27,6 +29,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "foundation-sites": "^6.4.4-rc1",
+    "node-sass": "^4.8.3",
+    "sass-loader": "^6.0.7",
+    "script-loader": "^0.7.2",
+    "style-loader": "^0.20.3",
     "webpack-cli": "^2.0.13"
   }
 }
